<resources>
    <string name="AUTO">Auto</string>
    <string name="Abb_AUTO">Auto</string>
    <string name="Abb_Title_Resolution">Resolution</string>
    <string name="Abb_Title_badge_labs">LABS</string>
    <string name="COLOR_TUNE_CUSTOM">Manual</string>
    <string name="F_AUTOFOCUS">Auto focus</string>
    <string name="F_AUTO_FLASH">Auto</string>
    <string name="F_MANUALFOCUS">Manual focus</string>
    <string name="ISO_100">100</string>
    <string name="ISO_125">125</string>
    <string name="ISO_160">160</string>
    <string name="ISO_1600">1600</string>
    <string name="ISO_200">200</string>
    <string name="ISO_250">250</string>
    <string name="ISO_320">320</string>
    <string name="ISO_3200">3200</string>
    <string name="ISO_400">400</string>
    <string name="ISO_50">50</string>
    <string name="ISO_500">500</string>
    <string name="ISO_64">64</string>
    <string name="ISO_640">640</string>
    <string name="ISO_80">80</string>
    <string name="ISO_800">800</string>
    <string name="KELVIN_VALUE_10000K">10000K</string>
    <string name="KELVIN_VALUE_2300K">2300K</string>
    <string name="KELVIN_VALUE_2400K">2400K</string>
    <string name="KELVIN_VALUE_2500K">2500K</string>
    <string name="KELVIN_VALUE_2600K">2600K</string>
    <string name="KELVIN_VALUE_2700K">2700K</string>
    <string name="KELVIN_VALUE_2800K">2800K</string>
    <string name="KELVIN_VALUE_2900K">2900K</string>
    <string name="KELVIN_VALUE_3000K">3000K</string>
    <string name="KELVIN_VALUE_3100K">3100K</string>
    <string name="KELVIN_VALUE_3200K">3200K</string>
    <string name="KELVIN_VALUE_3300K">3300K</string>
    <string name="KELVIN_VALUE_3400K">3400K</string>
    <string name="KELVIN_VALUE_3500K">3500K</string>
    <string name="KELVIN_VALUE_3600K">3600K</string>
    <string name="KELVIN_VALUE_3700K">3700K</string>
    <string name="KELVIN_VALUE_3800K">3800K</string>
    <string name="KELVIN_VALUE_3900K">3900K</string>
    <string name="KELVIN_VALUE_4000K">4000K</string>
    <string name="KELVIN_VALUE_4100K">4100K</string>
    <string name="KELVIN_VALUE_4200K">4200K</string>
    <string name="KELVIN_VALUE_4300K">4300K</string>
    <string name="KELVIN_VALUE_4400K">4400K</string>
    <string name="KELVIN_VALUE_4500K">4500K</string>
    <string name="KELVIN_VALUE_4600K">4600K</string>
    <string name="KELVIN_VALUE_4700K">4700K</string>
    <string name="KELVIN_VALUE_4800K">4800K</string>
    <string name="KELVIN_VALUE_4900K">4900K</string>
    <string name="KELVIN_VALUE_5000K">5000K</string>
    <string name="KELVIN_VALUE_5100K">5100K</string>
    <string name="KELVIN_VALUE_5200K">5200K</string>
    <string name="KELVIN_VALUE_5300K">5300K</string>
    <string name="KELVIN_VALUE_5400K">5400K</string>
    <string name="KELVIN_VALUE_5500K">5500K</string>
    <string name="KELVIN_VALUE_5600K">5600K</string>
    <string name="KELVIN_VALUE_5700K">5700K</string>
    <string name="KELVIN_VALUE_5800K">5800K</string>
    <string name="KELVIN_VALUE_5900K">5900K</string>
    <string name="KELVIN_VALUE_6000K">6000K</string>
    <string name="KELVIN_VALUE_6100K">6100K</string>
    <string name="KELVIN_VALUE_6200K">6200K</string>
    <string name="KELVIN_VALUE_6300K">6300K</string>
    <string name="KELVIN_VALUE_6400K">6400K</string>
    <string name="KELVIN_VALUE_6500K">6500K</string>
    <string name="KELVIN_VALUE_6600K">6600K</string>
    <string name="KELVIN_VALUE_6700K">6700K</string>
    <string name="KELVIN_VALUE_6800K">6800K</string>
    <string name="KELVIN_VALUE_6900K">6900K</string>
    <string name="KELVIN_VALUE_7000K">7000K</string>
    <string name="KELVIN_VALUE_7100K">7100K</string>
    <string name="KELVIN_VALUE_7200K">7200K</string>
    <string name="KELVIN_VALUE_7300K">7300K</string>
    <string name="KELVIN_VALUE_7400K">7400K</string>
    <string name="KELVIN_VALUE_7500K">7500K</string>
    <string name="KELVIN_VALUE_7600K">7600K</string>
    <string name="KELVIN_VALUE_7700K">7700K</string>
    <string name="KELVIN_VALUE_7800K">7800K</string>
    <string name="KELVIN_VALUE_7900K">7900K</string>
    <string name="KELVIN_VALUE_8000K">8000K</string>
    <string name="KELVIN_VALUE_8100K">8100K</string>
    <string name="KELVIN_VALUE_8200K">8200K</string>
    <string name="KELVIN_VALUE_8300K">8300K</string>
    <string name="KELVIN_VALUE_8400K">8400K</string>
    <string name="KELVIN_VALUE_8500K">8500K</string>
    <string name="KELVIN_VALUE_8600K">8600K</string>
    <string name="KELVIN_VALUE_8700K">8700K</string>
    <string name="KELVIN_VALUE_8800K">8800K</string>
    <string name="KELVIN_VALUE_8900K">8900K</string>
    <string name="KELVIN_VALUE_9000K">9000K</string>
    <string name="KELVIN_VALUE_9100K">9100K</string>
    <string name="KELVIN_VALUE_9200K">9200K</string>
    <string name="KELVIN_VALUE_9300K">9300K</string>
    <string name="KELVIN_VALUE_9400K">9400K</string>
    <string name="KELVIN_VALUE_9500K">9500K</string>
    <string name="KELVIN_VALUE_9600K">9600K</string>
    <string name="KELVIN_VALUE_9700K">9700K</string>
    <string name="KELVIN_VALUE_9800K">9800K</string>
    <string name="KELVIN_VALUE_9900K">9900K</string>
    <string name="MF_0_0">0.0</string>
    <string name="MF_0_1">0.1</string>
    <string name="MF_0_2">0.2</string>
    <string name="MF_0_3">0.3</string>
    <string name="MF_0_4">0.4</string>
    <string name="MF_0_5">0.5</string>
    <string name="MF_0_6">0.6</string>
    <string name="MF_0_7">0.7</string>
    <string name="MF_0_8">0.8</string>
    <string name="MF_0_9">0.9</string>
    <string name="MF_1_0">1.0</string>
    <string name="MULTI_RECORDING_SAVE_OPTION_MULTI">Save front and rear videos separately</string>
    <string name="MULTI_RECORDING_SAVE_OPTION_SINGLE">Save video as previewed</string>
    <string name="MULTI_RECORDING_TYPE_PIP">Picture-in-picture view</string>
    <string name="MULTI_RECORDING_TYPE_SINGLE">Single view</string>
    <string name="MULTI_RECORDING_TYPE_SPLIT">Split view</string>
    <string name="M_CENTER_WEIGHTED">Center-weighted metering</string>
    <string name="M_MATRIX">Matrix metering</string>
    <string name="M_SPOT">Spot metering</string>
    <string name="OPTION_OFF">Off</string>
    <string name="OPTION_ON">On</string>
    <string name="RMS_NIGHT_X15_TTS">Night fifteen times faster</string>
    <string name="RMS_NIGHT_X300_TTS">Night three hundred times faster</string>
    <string name="RMS_NIGHT_X45_TTS">Night forty five times faster</string>
    <string name="RMS_X10_TTS">Ten times faster</string>
    <string name="RMS_X15_TTS">Fifteen times faster</string>
    <string name="RMS_X16_TTS">Sixteen times faster</string>
    <string name="RMS_X30_TTS">Thirty times faster</string>
    <string name="RMS_X32_TTS">Thirty two times faster</string>
    <string name="RMS_X4_TTS">Four times faster</string>
    <string name="RMS_X5_TTS">Five times faster</string>
    <string name="RMS_X60_TTS">Sixty times faster</string>
    <string name="RMS_X64_TTS">Sixty-four times faster</string>
    <string name="RMS_X8_TTS">Eight times faster</string>
    <string name="Resolution_Ratio_16_9">Sixteen by nine</string>
    <string name="Resolution_Ratio_1_1">One by one</string>
    <string name="Resolution_Ratio_21_9">Twenty One by nine</string>
    <string name="Resolution_Ratio_3_4">Three by four</string>
    <string name="Resolution_Ratio_3_4_High_Resolution_TTS">Three by four %d-megapixel high resolution</string>
    <string name="Resolution_Ratio_4_3">Four by three</string>
    <string name="Resolution_Ratio_9_16">Nine by sixteen</string>
    <string name="Resolution_Ratio_9_21">Nine by twenty One</string>
    <string name="Resolution_Ratio_full">Full</string>
    <string name="Resolution_Ratio_title">Ratio</string>
    <string name="SHUTTER_SPEED_1">1/24000</string>
    <string name="SHUTTER_SPEED_10">1/1000</string>
    <string name="SHUTTER_SPEED_11">1/750</string>
    <string name="SHUTTER_SPEED_12">1/500</string>
    <string name="SHUTTER_SPEED_13">1/350</string>
    <string name="SHUTTER_SPEED_14">1/250</string>
    <string name="SHUTTER_SPEED_15">1/180</string>
    <string name="SHUTTER_SPEED_16">1/125</string>
    <string name="SHUTTER_SPEED_17">1/90</string>
    <string name="SHUTTER_SPEED_18">1/60</string>
    <string name="SHUTTER_SPEED_19">1/50</string>
    <string name="SHUTTER_SPEED_2">1/16000</string>
    <string name="SHUTTER_SPEED_20">1/45</string>
    <string name="SHUTTER_SPEED_21">1/30</string>
    <string name="SHUTTER_SPEED_22">1/20</string>
    <string name="SHUTTER_SPEED_23">1/15</string>
    <string name="SHUTTER_SPEED_24">1/10</string>
    <string name="SHUTTER_SPEED_25">1/8</string>
    <string name="SHUTTER_SPEED_26">1/6</string>
    <string name="SHUTTER_SPEED_27">1/4</string>
    <string name="Title_Advanced_Intelligent_Options">Advanced intelligent options</string>
    <string name="Title_SceneOptimizer">Scene optimizer</string>
    <string name="Title_quality_optimization">Quality Optimization</string>
    <string name="Title_quality_optimization_max">Maximum</string>
    <string name="Title_quality_optimization_mid">Medium</string>
    <string name="Title_quality_optimization_min">Minimum</string>
    <string name="advanced_intelligent_description">The quality optimization setting above only affects Photo mode.</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="cancel">CANCEL</string>
    <string name="dep_advanced_intelligent_options">dep_advanced_intelligent_options</string>
    <string name="dep_empty">dep_empty</string>
    <string name="dep_quality_optimization">dep_quality_optimization</string>
    <string name="dual_pip_size_off_menu_tts">Minimize picture-in-picture</string>
    <string name="dual_pip_size_on_menu_tts">Show picture-in-picture</string>
    <string name="dual_pip_size_toggle_scale_up_menu_tts">Enlarge picture-in-picture</string>
    <string name="dual_recording_v2_lens_select_lenses">Select lenses</string>
    <string name="dual_recording_v2_lens_select_view_title">Choose 2 lenses</string>
    <string name="dual_recording_v2_lens_selfie_title">Front</string>
    <string name="dual_recording_v2_lens_tele_title">Tele</string>
    <string name="dual_recording_v2_lens_ultra_wide_title">Ultra wide</string>
    <string name="dual_recording_v2_lens_wide_title">Wide</string>
    <string name="key_advanced_intelligent_summary">advanced_intelligent_summary</string>
    <string name="key_quality_optimization_max">quality_optimization_max</string>
    <string name="key_quality_optimization_mid">quality_optimization_mid</string>
    <string name="key_quality_optimization_min">quality_optimization_min</string>
    <string name="key_scene_optimizer">scene_optimizer</string>
    <string name="key_widget_settings_custom_camera_background">widget_settings_custom_camera_background</string>
    <string name="key_widget_settings_custom_camera_save_to">widget_settings_custom_camera_save_to</string>
    <string name="key_widget_settings_custom_camera_starting_mode">widget_settings_custom_camera_starting_mode</string>
    <string name="key_widget_settings_custom_camera_title">widget_settings_custom_camera_title</string>
    <string name="okay">OK</string>
    <string name="quality_optimization_mid_summary">Speed up capture time by doing less optimization.</string>
    <string name="quality_optimization_min_summary">"Take pictures as fast as possible by optimizing pictures after they're taken."</string>
    <string name="save">SAVE</string>
    <string name="widget_setting_custom_camera_background">Widget background</string>
    <string name="widget_setting_custom_camera_save_to">Save pictures and videos to</string>
    <string name="widget_setting_custom_camera_starting_mode">Starting mode</string>
    <string name="widget_setting_custom_camera_title">Title on widget</string>
    <string name="widget_setting_title">Widget settings</string>
</resources>