<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:id="@id/dual_recording_lens_select_main" android:tag="layout/dual_recording_v2_select_lens_layout_0" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textAppearance="@style/SecBold" android:textSize="@dimen/dual_recording_v2_lens_select_view_title_text_size" android:textColor="@color/dual_recording_v2_lens_select_view_title_text_color" android:gravity="center" android:id="@id/title" android:layout_width="@dimen/dual_recording_v2_lens_select_view_title_width" android:layout_height="@dimen/dual_recording_v2_lens_select_view_title_height" android:layout_marginTop="@dimen/dual_recording_v2_lens_select_view_title_top_margin" android:text="@string/dual_recording_v2_lens_select_view_title" android:alpha="0.85" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/lens_layout" android:layout_width="@dimen/dual_recording_v2_lens_select_view_lens_layout_width" android:layout_height="@dimen/dual_recording_v2_lens_select_view_lens_layout_height" android:layout_marginTop="@dimen/dual_recording_v2_lens_select_view_lens_layout_top_margin" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/title">
        <com.sec.android.app.camera.layer.menu.dualrecordinglensselect.LensView android:id="@id/selfie_lens_view" android:tag="@string/dual_recording_v2_lens_selfie_title" android:layout_width="@dimen/dual_recording_v2_lens_select_view_lens_view_width" android:layout_height="@dimen/dual_recording_v2_lens_select_view_lens_view_height" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <com.sec.android.app.camera.layer.menu.dualrecordinglensselect.LensView android:id="@id/ultra_wide_lens_view" android:tag="@string/dual_recording_v2_lens_ultra_wide_title" android:layout_width="@dimen/dual_recording_v2_lens_select_view_lens_view_width" android:layout_height="@dimen/dual_recording_v2_lens_select_view_lens_view_height" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <com.sec.android.app.camera.layer.menu.dualrecordinglensselect.LensView android:id="@id/wide_lens_view" android:tag="@string/dual_recording_v2_lens_wide_title" android:layout_width="@dimen/dual_recording_v2_lens_select_view_lens_view_width" android:layout_height="@dimen/dual_recording_v2_lens_select_view_lens_view_height" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" />
        <com.sec.android.app.camera.layer.menu.dualrecordinglensselect.LensView android:id="@id/tele_wide_lens_view" android:tag="@string/dual_recording_v2_lens_tele_title" android:layout_width="@dimen/dual_recording_v2_lens_select_view_lens_view_width" android:layout_height="@dimen/dual_recording_v2_lens_select_view_lens_view_height" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button android:textAppearance="@style/SecSemiBold" android:textSize="@dimen/dual_recording_v2_lens_select_view_lens_ok_button_text_size" android:textColor="@color/white" android:id="@id/ok_button" android:tag="@string/okay" android:background="@drawable/dual_recording_v2_lens_select_view_ok_button_bg" android:layout_width="@dimen/dual_recording_v2_lens_select_view_lens_ok_button_width" android:layout_height="@dimen/dual_recording_v2_lens_select_view_lens_ok_button_height" android:layout_marginBottom="@dimen/dual_recording_v2_lens_select_view_lens_ok_button_bottom_margin" android:text="@string/okay" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
