<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:id="@id/shooting_mode_dual_recording_main" android:tag="layout/shooting_mode_dual_recording_v2_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/quick_setting_guideline" android:layout_width="wrap_content" android:layout_height="0.0dip" app:layout_constraintGuide_percent="@integer/quick_setting_guideline_percent" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/top_guideline" android:layout_width="wrap_content" android:layout_height="0.0dip" app:layout_constraintGuide_percent="@integer/top_guideline_percent" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/bottom_guideline" android:layout_width="wrap_content" android:layout_height="0.0dip" app:layout_constraintGuide_percent="@integer/bottom_guideline_percent" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/shutter_area_guideline" android:layout_width="wrap_content" android:layout_height="0.0dip" app:layout_constraintGuide_percent="@integer/shutter_area_guideline_percent" />
    <com.sec.android.app.camera.widget.RecordingTimeIndicator android:id="@id/recording_time_indicator" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@id/quick_setting_guideline" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0" />
    <RelativeLayout android:id="@id/dual_view_recording_dual_view_layout" android:background="#ff24ff7d" android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="@dimen/multi_recording_dual_view_layout_height" android:layout_margin="@dimen/multi_recording_dual_view_layout_margin" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/top_guideline" />
    <RelativeLayout android:id="@id/wrapper_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <com.sec.android.app.camera.widget.DualPipRect android:id="@id/dual_view_recording_dual_pip_rect" android:visibility="invisible" android:layout_width="@dimen/multi_recording_list_pip_rect_width" android:layout_height="@dimen/multi_recording_list_pip_rect_height">
            <FrameLayout android:layout_gravity="top" android:id="@id/dual_pip_stand_by_layout" android:layout_width="fill_parent" android:layout_height="@dimen/multi_recording_list_pip_rect_menu_size">
                <ImageButton android:layout_gravity="left" android:id="@id/dual_pip_size_toggle_menu" android:background="@android:color/transparent" android:visibility="invisible" android:layout_width="@dimen/multi_recording_list_pip_rect_menu_size" android:layout_height="fill_parent" android:src="@drawable/scale_up_btn" android:contentDescription="@string/dual_pip_size_toggle_scale_up_menu_tts" />
                <ImageButton android:layout_gravity="right" android:id="@id/dual_pip_size_off_menu" android:background="@android:color/transparent" android:visibility="invisible" android:layout_width="@dimen/multi_recording_list_pip_rect_menu_size" android:layout_height="fill_parent" android:src="@drawable/btn_hide" android:contentDescription="@string/dual_pip_size_off_menu_tts" />
                <ImageButton android:layout_gravity="right" android:id="@id/dual_pip_size_on_menu" android:background="@android:color/transparent" android:visibility="invisible" android:layout_width="@dimen/multi_recording_list_pip_rect_menu_size" android:layout_height="fill_parent" android:src="@drawable/btn_pip_call" android:contentDescription="@string/dual_pip_size_on_menu_tts" />
            </FrameLayout>
        </com.sec.android.app.camera.widget.DualPipRect>
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/lens_select_layout" android:tag="@string/dual_recording_v2_lens_select_lenses" android:background="@drawable/dual_recording_v2_lens_select_layout_background" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="@dimen/dual_recording_v2_lens_select_layout_height" android:layout_marginBottom="@dimen/dual_recording_v2_lens_select_layout_bottom_margin" app:layout_constraintBottom_toTopOf="@id/bottom_guideline" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent">
        <ImageView android:layout_gravity="center" android:background="@android:color/transparent" android:layout_width="@dimen/dual_recording_v2_lens_select_layout_icon_size" android:layout_height="@dimen/dual_recording_v2_lens_select_layout_icon_size" android:layout_marginLeft="@dimen/dual_recording_v2_lens_select_layout_icon_left_margin" android:src="@drawable/dual_recording_lens_select_no_bg_small_ic" />
        <TextView android:textAppearance="@style/SecSemiBold" android:textSize="@dimen/dual_recording_v2_lens_select_layout_text_size" android:textColor="@color/white" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dual_recording_v2_lens_select_layout_text_left_margin" android:layout_marginRight="@dimen/dual_recording_v2_lens_select_layout_text_right_margin" android:text="@string/dual_recording_v2_lens_select_lenses" />
    </LinearLayout>
    <ImageButton android:id="@id/lens_select_button" android:tag="@string/dual_recording_v2_lens_select_lenses" android:background="@android:color/transparent" android:visibility="gone" android:layout_width="@dimen/dual_recording_v2_lens_select_image_button_size" android:layout_height="@dimen/dual_recording_v2_lens_select_image_button_size" android:layout_marginBottom="@dimen/dual_recording_v2_lens_select_image_button_bottom_margin" android:src="@drawable/dual_recording_lens_select_ic" app:layout_constraintBottom_toTopOf="@id/bottom_guideline" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
